[gd_scene load_steps=36 format=3 uid="uid://ds05k504rtfgy"]

[ext_resource type="Texture2D" uid="uid://juolts5xa5ni" path="res://art/characters/Boss_1_overhead.png" id="1_3ip1r"]
[ext_resource type="Script" uid="uid://cn0uhqa3spywj" path="res://scripts/boss_enemy.gd" id="1_lii3u"]
[ext_resource type="Texture2D" uid="uid://b1fmywfjrtgcv" path="res://art/characters/Boss_1_slash.png" id="2_uudxn"]
[ext_resource type="Texture2D" uid="uid://c6wvh5yc2lo4r" path="res://art/characters/Boss_1_idle.png" id="3_thqtu"]
[ext_resource type="Texture2D" uid="uid://bfs47jk8pekmo" path="res://art/characters/Boss_1_run.png" id="4_uudxn"]
[ext_resource type="PackedScene" uid="uid://cfcqvmiyo3508" path="res://scenes/BossHealthBar.tscn" id="6_lii3u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85uuv"]
atlas = ExtResource("1_3ip1r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ito0q"]
atlas = ExtResource("1_3ip1r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk8wk"]
atlas = ExtResource("1_3ip1r")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_426nd"]
atlas = ExtResource("1_3ip1r")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xtl3"]
atlas = ExtResource("1_3ip1r")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd2uv"]
atlas = ExtResource("2_uudxn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6jo5"]
atlas = ExtResource("2_uudxn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad7la"]
atlas = ExtResource("2_uudxn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_og5yg"]
atlas = ExtResource("2_uudxn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wuv4"]
atlas = ExtResource("2_uudxn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir1e0"]
atlas = ExtResource("2_uudxn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwpad"]
atlas = ExtResource("2_uudxn")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t2um"]
atlas = ExtResource("3_thqtu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ip1r"]
atlas = ExtResource("3_thqtu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uudxn"]
atlas = ExtResource("3_thqtu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_thqtu"]
atlas = ExtResource("3_thqtu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lii3u"]
atlas = ExtResource("3_thqtu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ioca"]
atlas = ExtResource("3_thqtu")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_05uep"]
atlas = ExtResource("3_thqtu")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrkay"]
atlas = ExtResource("3_thqtu")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n5it"]
atlas = ExtResource("4_uudxn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt5hg"]
atlas = ExtResource("4_uudxn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk51m"]
atlas = ExtResource("4_uudxn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndxpq"]
atlas = ExtResource("4_uudxn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eujew"]
atlas = ExtResource("4_uudxn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4t2um"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85uuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ito0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk8wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_426nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xtl3")
}],
"loop": true,
"name": &"attack1",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd2uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6jo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad7la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og5yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wuv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir1e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwpad")
}],
"loop": true,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t2um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ip1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uudxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thqtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lii3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ioca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05uep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrkay")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n5it")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt5hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk51m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndxpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eujew")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3ip1r"]
radius = 313.014

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4t2um"]
size = Vector2(15, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_thqtu"]
radius = 34.0

[node name="BossEnemy" type="CharacterBody2D"]
script = ExtResource("1_lii3u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4t2um")
animation = &"attack1"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-3, 2)
shape = SubResource("CircleShape2D_3ip1r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_4t2um")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_thqtu")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BossHealthBar" parent="CanvasLayer" instance=ExtResource("6_lii3u")]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -545.0
offset_top = 92.0
offset_right = 550.0
offset_bottom = 147.0
grow_horizontal = 2
value = 50.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -205.5
offset_right = 205.5
offset_bottom = 84.0
grow_horizontal = 2

[node name="boss title" type="Label" parent="CanvasLayer/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "HOODED MAN"

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
